# teaching_assistant_project

./: README.md  a.py  b.py  config.py  pyproject.toml
.github/workflows/: ci.yml
app/: bot.py  generate_signature.py
app/handlers/: conversation_handler.py  event_handler.py  message_handler.py
app/prompts/: teaching_prompt.json  templates.json
app/utils/: database.py  llm_connector.py  llm_connector_gem.py  prompt_loader.py  redis_manager.py  state_manager.py
tests/: test_bot.py  test_conversation_handler.py  test_llm_connector.py  test_redis_manager.py
